@@ -2730,9 +2730,12 @@ SCIP_RETCODE tightenVarsBoundsSOS1(
       SCIP_DIGRAPH* conflictgraphlin;
       int** cliquecovers = NULL;           /* clique covers of indices of variables in linear constraint */
       int* cliquecoversizes = NULL;        /* size of each cover */
-      int ncliquecovers;
+      SCIP_VAR* sosvar = NULL;
       SCIP_Real* cliquecovervals = NULL;
+      SCIP_Real constant;
       int* varincover = NULL;              /* varincover[i] = cover of SOS1 index i */
+      int ncliquecovers;
+      int requiredsize;
 
       int v;
       int i;
@@ -2742,116 +2745,60 @@ SCIP_RETCODE tightenVarsBoundsSOS1(
       if ( c < nlinearconss )
       {
          SCIP_VAR** origlinvars;
-         int noriglinvars;
          SCIP_Real* origlinvals;
-         SCIP_Real origrhs;
-         SCIP_Real origlhs;
-         SCIP_Real constant;
-         int requiredsize;
 
          /* get data of linear constraint */
-         noriglinvars = SCIPgetNVarsLinear(scip, linearconss[c]);
+         ntrafolinvars = SCIPgetNVarsLinear(scip, linearconss[c]);
+         if ( ntrafolinvars < 1 )
+            continue;
+
          origlinvars = SCIPgetVarsLinear(scip, linearconss[c]);
          origlinvals = SCIPgetValsLinear(scip, linearconss[c]);
-         origrhs = SCIPgetRhsLinear(scip, linearconss[c]);
-         origlhs = SCIPgetLhsLinear(scip, linearconss[c]);
-
-         if ( noriglinvars < 1 )
-            continue;
          assert( origlinvars != NULL );
          assert( origlinvals != NULL );
 
          /* copy variables and coefficients of linear constraint */
-         SCIP_CALL( SCIPduplicateBufferArray(scip, &trafolinvars, origlinvars, noriglinvars) );
-         SCIP_CALL( SCIPduplicateBufferArray(scip, &trafolinvals, origlinvals, noriglinvars) );
-         ntrafolinvars = noriglinvars;
+         SCIP_CALL( SCIPduplicateBufferArray(scip, &trafolinvars, origlinvars, ntrafolinvars) );
+         SCIP_CALL( SCIPduplicateBufferArray(scip, &trafolinvals, origlinvals, ntrafolinvars) );
 
-         /* transform linear constraint */
-         constant = 0.0;
-         SCIP_CALL( SCIPgetProbvarLinearSum(scip, trafolinvars, trafolinvals, &ntrafolinvars, noriglinvars, &constant, &requiredsize, TRUE) );
-         if( requiredsize > ntrafolinvars )
-         {
-            SCIP_CALL( SCIPreallocBufferArray(scip, &trafolinvars, requiredsize) );
-            SCIP_CALL( SCIPreallocBufferArray(scip, &trafolinvals, requiredsize) );
-
-            SCIP_CALL( SCIPgetProbvarLinearSum(scip, trafolinvars, trafolinvals, &ntrafolinvars, requiredsize, &constant, &requiredsize, TRUE) );
-            assert( requiredsize <= ntrafolinvars );
-         }
-         trafolhs = origlhs - constant;
-         traforhs = origrhs - constant;
+         trafolhs = SCIPgetLhsLinear(scip, linearconss[c]);
+         traforhs = SCIPgetRhsLinear(scip, linearconss[c]);
       }
       else
       {
-         SCIP_VAR* var;
+         sosvar = SCIPnodeGetVarSOS1(conflictgraph, c - nlinearconss);
 
-         var = SCIPnodeGetVarSOS1(conflictgraph, c-nlinearconss);
-
-         if ( SCIPvarGetStatus(var) == SCIP_VARSTATUS_AGGREGATED )
-         {
-            SCIP_Real constant;
-
-            SCIP_CALL( SCIPallocBufferArray(scip, &trafolinvars, 2) );
-            SCIP_CALL( SCIPallocBufferArray(scip, &trafolinvals, 2) );
-
-            constant = SCIPvarGetAggrConstant(var);
-            trafolinvars[0] = SCIPvarGetAggrVar(var);
-            trafolinvals[0] = SCIPvarGetAggrScalar(var);
-            trafolinvars[1] = var;
-            trafolinvals[1] = -1.0;
-            trafolhs = -constant;
-            traforhs = -constant;
-            ntrafolinvars = 2;
-         }
-         else if ( SCIPvarGetStatus(var) == SCIP_VARSTATUS_MULTAGGR )
-         {
-            SCIP_Real* scalars;
-            SCIP_VAR** agrvars;
-            SCIP_Real constant;
-            int nagrvars;
-
-            nagrvars = SCIPvarGetMultaggrNVars(var);
-
-            SCIP_CALL( SCIPallocBufferArray(scip, &trafolinvars, nagrvars+1) );
-            SCIP_CALL( SCIPallocBufferArray(scip, &trafolinvals, nagrvars+1) );
-
-            agrvars = SCIPvarGetMultaggrVars(var);
-            scalars = SCIPvarGetMultaggrScalars(var);
-            constant = SCIPvarGetMultaggrConstant(var);
-
-            for (v = 0; v < nagrvars; ++v)
-            {
-               trafolinvars[v] = agrvars[v];
-               trafolinvals[v] = scalars[v];
-            }
-            trafolinvars[nagrvars] = var;
-            trafolinvals[nagrvars] = -1.0;
-            trafolhs = -constant;
-            traforhs = -constant;
-            ntrafolinvars = nagrvars + 1;
-         }
-         else if ( SCIPvarGetStatus(var) == SCIP_VARSTATUS_NEGATED )
-         {
-            SCIP_VAR* negvar;
-            SCIP_Real negcons;
-
-            /* get negation variable and negation offset */
-            negvar = SCIPvarGetNegationVar(var);
-            negcons = SCIPvarGetNegationConstant(var);
-
-            SCIP_CALL( SCIPallocBufferArray(scip, &trafolinvars, 2) );
-            SCIP_CALL( SCIPallocBufferArray(scip, &trafolinvals, 2) );
-
-            trafolinvars[0] = negvar;
-            trafolinvars[1] = var;
-            trafolinvals[0] = 1.0;
-            trafolinvals[1] = 1.0;
-            trafolhs = negcons;
-            traforhs = negcons;
-            ntrafolinvars = 2;
-         }
-         else
+         if ( SCIPvarGetStatus(sosvar) != SCIP_VARSTATUS_AGGREGATED
+            && SCIPvarGetStatus(sosvar) != SCIP_VARSTATUS_MULTAGGR
+            && SCIPvarGetStatus(sosvar) != SCIP_VARSTATUS_NEGATED )
             continue;
+
+         /* store variable so it will be transformed to active variables below */
+         ntrafolinvars = 1;
+         SCIP_CALL( SCIPallocBufferArray(scip, &trafolinvars, ntrafolinvars + 1) );
+         SCIP_CALL( SCIPallocBufferArray(scip, &trafolinvals, ntrafolinvars + 1) );
+
+         trafolinvars[0] = sosvar;
+         trafolinvals[0] = 1.0;
+
+         trafolhs = 0.0;
+         traforhs = 0.0;
       }
+      assert( ntrafolinvars >= 1 );
+
+      /* transform linear constraint */
+      constant = 0.0;
+      SCIP_CALL( SCIPgetProbvarLinearSum(scip, trafolinvars, trafolinvals, &ntrafolinvars, ntrafolinvars, &constant, &requiredsize, TRUE) );
+      if( requiredsize > ntrafolinvars )
+      {
+         SCIP_CALL( SCIPreallocBufferArray(scip, &trafolinvars, requiredsize + 1) );
+         SCIP_CALL( SCIPreallocBufferArray(scip, &trafolinvals, requiredsize + 1) );
+
+         SCIP_CALL( SCIPgetProbvarLinearSum(scip, trafolinvars, trafolinvals, &ntrafolinvars, requiredsize, &constant, &requiredsize, TRUE) );
+         assert( requiredsize <= ntrafolinvars );
+      }
+      trafolhs -= constant;
+      traforhs -= constant;
 
       if ( ntrafolinvars == 0 )
       {
@@ -2860,22 +2807,27 @@ SCIP_RETCODE tightenVarsBoundsSOS1(
          continue;
       }
 
+      /* possibly add sos1 variable to create aggregation/multiaggregation/negation equality */
+      if ( sosvar != NULL )
+      {
+         trafolinvals[ntrafolinvars] = -1.0;
+         trafolinvars[ntrafolinvars] = sosvar;
+         ++ntrafolinvars;
+      }
+
       /* compute lower and upper bounds of each term a_i * x_i of transformed constraint */
       for (v = 0; v < ntrafolinvars; ++v)
       {
-         SCIP_Real lb = SCIPvarGetLbLocal(trafolinvars[v]);
-         SCIP_Real ub = SCIPvarGetUbLocal(trafolinvars[v]);
+         SCIP_Real lb;
+         SCIP_Real ub;
+
+         lb = SCIPvarGetLbLocal(trafolinvars[v]);
+         ub = SCIPvarGetUbLocal(trafolinvars[v]);
 
          if ( trafolinvals[v] < 0.0 )
-         {
-            SCIP_Real temp;
+            SCIPswapReals(&lb, &ub);
 
-            temp = lb;
-            lb = ub;
-            ub = temp;
-         }
-
-         assert(!SCIPisInfinity(scip, REALABS(trafolinvals[v])));
+         assert( ! SCIPisInfinity(scip, REALABS(trafolinvals[v])) );
 
          if ( SCIPisInfinity(scip, REALABS(lb)) || SCIPisInfinity(scip, REALABS(lb * trafolinvals[v])) )
             trafolbs[v] = -SCIPinfinity(scip);
